[gd_scene load_steps=64 format=3 uid="uid://dyortnniqa1ua"]

[ext_resource type="Script" path="res://scripts/player_spear.gd" id="1_eacyd"]
[ext_resource type="Texture2D" uid="uid://cb4a45ces2cnk" path="res://sprites/knight3.0.png" id="2_u30ly"]
[ext_resource type="Texture2D" uid="uid://dk41htrxydoh1" path="res://sprites/heavy_spear.png" id="3_lwljw"]
[ext_resource type="PackedScene" uid="uid://dsdts71tmlke5" path="res://scenes/damage_zone.tscn" id="6_hswxh"]
[ext_resource type="AudioStream" uid="uid://cg4mkt8a0yb82" path="res://sounds/weapon_swing6.wav" id="7_2it63"]
[ext_resource type="AudioStream" uid="uid://dr16khaikgudr" path="res://sounds/hit-swing-sword-small.wav" id="8_hxgfi"]
[ext_resource type="AudioStream" uid="uid://d13o0qlhyhqs1" path="res://sounds/695384__fmaudio__male-death-cry-1.wav" id="9_uwwuq"]
[ext_resource type="AudioStream" uid="uid://bpr5anhjkj6ku" path="res://sounds/521999__kastenfrosch__whoosh-dash.wav" id="10_drpr7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y1hdt"]
radius = 40.6079

[sub_resource type="CircleShape2D" id="CircleShape2D_yqexy"]
radius = 53.1507

[sub_resource type="Animation" id="Animation_520qt"]
resource_name = "Attack"
length = 0.44
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12, 0.22, 0.28, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0, 0.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.12, 0.22, 0.28, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(23, 50), Vector2(-38, 32), Vector2(235, 0), Vector2(235, 0), Vector2(23, 50)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.12),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stub"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/Weapon/damage_zone:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.12, 0.24),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_7smbj"]
resource_name = "HoldItem"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(23, 50)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/ItemHandle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/ItemHandle:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(55, -57)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D/ItemHandle:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.280392]
}

[sub_resource type="Animation" id="Animation_7u53w"]
resource_name = "Idle_2"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(23, 50)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/ItemHandle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1ea80"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(23, 50)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/Weapon/damage_zone:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D/ItemHandle:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D/ItemHandle:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.280392]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D/ItemHandle:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(55, -57)]
}

[sub_resource type="Animation" id="Animation_2ax2q"]
resource_name = "dash"
length = 0.12
step = 0.02
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"dash"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(23, 50)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/Weapon:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_yn61v"]
resource_name = "dash_attack"
length = 1.14
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.32, 0.4, 0.48, 0.58, 0.66, 0.74, 0.96, 1.14),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [2.95813, 2.95813, 1.83972, 0.0770224, -0.137053, -2.02642, -2.57868, -0.84052, 0.567184, 2.50551, 2.50551, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.32, 0.4, 0.48, 0.58, 0.66, 0.74, 0.96, 1.14),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-61, 66), Vector2(-61, 66), Vector2(3, 118), Vector2(96, 53), Vector2(105, -7), Vector2(1, -132), Vector2(-51, -98), Vector2(146, -97), Vector2(132, 97), Vector2(-30, 106), Vector2(-30, 106), Vector2(23, 50)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.34, 0.48, 0.74),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"dash_attack_sound"
}, {
"args": [],
"method": &"dash_attack_stop"
}, {
"args": [],
"method": &"dash_second_attack"
}, {
"args": [],
"method": &"dash_attack_stop"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/Weapon/damage_zone:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.4, 0.48, 0.74),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}

[sub_resource type="Animation" id="Animation_0hhfo"]
resource_name = "drop_item"
length = 0.04

[sub_resource type="Animation" id="Animation_bsl3y"]
resource_name = "dying"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_emit_hero_death"
}]
}

[sub_resource type="Animation" id="Animation_7vio4"]
resource_name = "stun"
loop_mode = 1

[sub_resource type="Animation" id="Animation_ly6d4"]
resource_name = "use_item"
length = 0.2
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ItemHandle:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-2.08857, -2.08857, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/ItemHandle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.08, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-32, -85), Vector2(-32, -85), Vector2(87, -2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/ItemHandle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.12),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.12),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"throw_item"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_805h5"]
_data = {
"Attack": SubResource("Animation_520qt"),
"HoldItem": SubResource("Animation_7smbj"),
"Idle_2": SubResource("Animation_7u53w"),
"RESET": SubResource("Animation_1ea80"),
"dash": SubResource("Animation_2ax2q"),
"dash_attack": SubResource("Animation_yn61v"),
"drop_item": SubResource("Animation_0hhfo"),
"dying": SubResource("Animation_bsl3y"),
"stun": SubResource("Animation_7vio4"),
"use_item": SubResource("Animation_ly6d4")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8hewe"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4xs71"]
animation = &"HoldItem"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_llu4x"]
animation = &"Idle_2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bakcq"]
animation = &"dash"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ka6py"]
animation = &"dash_attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ggwrt"]
animation = &"drop_item"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x5wc5"]
animation = &"dying"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yx11l"]
animation = &"stun"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xk3wl"]
animation = &"use_item"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1e758"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bqvsw"]
advance_mode = 2
advance_condition = &"stun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2w0km"]
advance_mode = 2
advance_condition = &"unstun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sjiku"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m6k5h"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1jlru"]
advance_mode = 2
advance_condition = &"dash"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cuay5"]
advance_mode = 2
advance_condition = &"hold_item"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a2abo"]
priority = 0
switch_mode = 2
advance_mode = 2
advance_condition = &"hold_item"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0bc4v"]
advance_mode = 2
advance_condition = &"dash"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_l57li"]
advance_mode = 2
advance_condition = &"stun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ifemr"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_upuoj"]
advance_mode = 2
advance_condition = &"hide_item"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4f8xo"]
advance_mode = 2
advance_condition = &"use_item"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5i87m"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8uqye"]
advance_mode = 2
advance_condition = &"stun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4vbcc"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ln0di"]
priority = 0
advance_mode = 2
advance_condition = &"unstun & hold_item"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qfpll"]
advance_mode = 2
advance_condition = &"drop_item"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2t41s"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u3s8l"]
advance_mode = 2
advance_condition = &"stun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ir0ar"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1n82x"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_foi4y"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j7p1h"]
advance_mode = 2
advance_condition = &"stun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_78dy3"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2llvj"]
advance_mode = 2
advance_condition = &"stun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lu84a"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uri6y"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5o1q1"]
advance_mode = 2
advance_condition = &"dash_attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f5hik"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4hpgw"]
advance_mode = 2
advance_condition = &"stun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_thnnf"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_07lbm"]
states/Attack/node = SubResource("AnimationNodeAnimation_8hewe")
states/Attack/position = Vector2(460.285, 373.17)
states/End/position = Vector2(1036.5, -124.5)
states/HoldItem/node = SubResource("AnimationNodeAnimation_4xs71")
states/HoldItem/position = Vector2(77.305, -62.904)
states/Idle_2/node = SubResource("AnimationNodeAnimation_llu4x")
states/Idle_2/position = Vector2(394.737, 179.498)
states/Start/position = Vector2(314.5, 373.75)
states/dash/node = SubResource("AnimationNodeAnimation_bakcq")
states/dash/position = Vector2(130.528, 67.1085)
states/dash_attack/node = SubResource("AnimationNodeAnimation_ka6py")
states/dash_attack/position = Vector2(129.82, 293.21)
states/drop_item/node = SubResource("AnimationNodeAnimation_ggwrt")
states/drop_item/position = Vector2(578.32, -250.269)
states/dying/node = SubResource("AnimationNodeAnimation_x5wc5")
states/dying/position = Vector2(823.71, 1.0448)
states/stun/node = SubResource("AnimationNodeAnimation_yx11l")
states/stun/position = Vector2(849.81, 222.202)
states/use_item/node = SubResource("AnimationNodeAnimation_xk3wl")
states/use_item/position = Vector2(241.98, -144.865)
transitions = ["Start", "Idle_2", SubResource("AnimationNodeStateMachineTransition_1e758"), "Idle_2", "stun", SubResource("AnimationNodeStateMachineTransition_bqvsw"), "stun", "Idle_2", SubResource("AnimationNodeStateMachineTransition_2w0km"), "Idle_2", "dying", SubResource("AnimationNodeStateMachineTransition_sjiku"), "stun", "dying", SubResource("AnimationNodeStateMachineTransition_m6k5h"), "Idle_2", "dash", SubResource("AnimationNodeStateMachineTransition_1jlru"), "Idle_2", "HoldItem", SubResource("AnimationNodeStateMachineTransition_cuay5"), "dash", "HoldItem", SubResource("AnimationNodeStateMachineTransition_a2abo"), "HoldItem", "dash", SubResource("AnimationNodeStateMachineTransition_0bc4v"), "HoldItem", "stun", SubResource("AnimationNodeStateMachineTransition_l57li"), "HoldItem", "dying", SubResource("AnimationNodeStateMachineTransition_ifemr"), "HoldItem", "Idle_2", SubResource("AnimationNodeStateMachineTransition_upuoj"), "HoldItem", "use_item", SubResource("AnimationNodeStateMachineTransition_4f8xo"), "use_item", "Idle_2", SubResource("AnimationNodeStateMachineTransition_5i87m"), "use_item", "stun", SubResource("AnimationNodeStateMachineTransition_8uqye"), "use_item", "dying", SubResource("AnimationNodeStateMachineTransition_4vbcc"), "stun", "HoldItem", SubResource("AnimationNodeStateMachineTransition_ln0di"), "HoldItem", "drop_item", SubResource("AnimationNodeStateMachineTransition_qfpll"), "drop_item", "Idle_2", SubResource("AnimationNodeStateMachineTransition_2t41s"), "drop_item", "stun", SubResource("AnimationNodeStateMachineTransition_u3s8l"), "drop_item", "dying", SubResource("AnimationNodeStateMachineTransition_ir0ar"), "Idle_2", "Attack", SubResource("AnimationNodeStateMachineTransition_1n82x"), "Attack", "Idle_2", SubResource("AnimationNodeStateMachineTransition_foi4y"), "Attack", "stun", SubResource("AnimationNodeStateMachineTransition_j7p1h"), "Attack", "dying", SubResource("AnimationNodeStateMachineTransition_78dy3"), "dash", "stun", SubResource("AnimationNodeStateMachineTransition_2llvj"), "dash", "dying", SubResource("AnimationNodeStateMachineTransition_lu84a"), "dash", "Idle_2", SubResource("AnimationNodeStateMachineTransition_uri6y"), "Idle_2", "dash_attack", SubResource("AnimationNodeStateMachineTransition_5o1q1"), "dash_attack", "Idle_2", SubResource("AnimationNodeStateMachineTransition_f5hik"), "dash_attack", "stun", SubResource("AnimationNodeStateMachineTransition_4hpgw"), "dash_attack", "dying", SubResource("AnimationNodeStateMachineTransition_thnnf")]
graph_offset = Vector2(-21.7801, -265.563)

[node name="Player" type="CharacterBody2D" groups=["human"]]
z_index = 10
script = ExtResource("1_eacyd")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_u30ly")
region_rect = Rect2(512, 256, 128, 128)

[node name="Weapon" type="Sprite2D" parent="Sprite2D"]
z_index = -1
position = Vector2(23, 50)
texture = ExtResource("3_lwljw")
region_rect = Rect2(0, 0, 256, 128)

[node name="damage_zone" parent="Sprite2D/Weapon" node_paths=PackedStringArray("sound") instance=ExtResource("6_hswxh")]
rotation = -2.50551
sound = NodePath("../../../sword_hit")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Weapon/damage_zone"]
position = Vector2(-128.498, 93.6493)
shape = SubResource("CircleShape2D_y1hdt")

[node name="ItemHandle" type="Node2D" parent="Sprite2D"]
visible = false
z_index = -1
position = Vector2(55, -57)
rotation = -0.280392

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yqexy")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_805h5")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_805h5")
}
tree_root = SubResource("AnimationNodeStateMachine_07lbm")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack = false
parameters/conditions/dash = false
parameters/conditions/dash_attack = false
parameters/conditions/drop_item = false
parameters/conditions/dying = false
parameters/conditions/hide_item = false
parameters/conditions/hold_item = false
parameters/conditions/stun = false
parameters/conditions/unstun = false
"parameters/conditions/unstun & hold_item" = false
parameters/conditions/use_item = false

[node name="sword_swing_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_2it63")
bus = &"SFX"

[node name="sword_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_hxgfi")
volume_db = 5.0
bus = &"SFX"

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_uwwuq")
bus = &"SFX"

[node name="dash_cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="dash_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_drpr7")
volume_db = -5.0
bus = &"SFX"

[node name="emit_signal" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="timeout" from="emit_signal" to="." method="_on_emit_signal_timeout"]
